--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 .concept {
   background: rgba(199, 214, 224, 0.6);
-  font-family: Lato;
+  font-family: 'Lato', sans-serif;
 }
 
 .app-screen {
@@ -13,9 +13,11 @@
 header h1 {
   text-align: center;
   letter-spacing: 3px;
+  color: #044950;
 }
 section.app-screen {
   background: #02afbd;
+  /* border: 1px solid black; */
 }
 
 section.loginScreen {
@@ -30,7 +32,7 @@ main.app {
   display: flex;
   justify-content: space-around;
   width: 1400px;
-  height: 800px;
+  height: 760px;
 }
 
 div.app-screen-logo {
@@ -87,9 +89,10 @@ div.menu {
   height: 40px;
   align-self: center;
   position: absolute;
-  bottom: -35px;
+  bottom: -12px;
   background: white;
   width: 342px;
+  z-index: 1;
 }
 div.menu-wrapper {
   width: 140px;
@@ -97,4 +100,203 @@ div.menu-wrapper {
   border-bottom: 3px solid rgba(0, 0, 0, 0.9);
   border-radius: 5px;
   margin-top: 19px;
+}
+
+div.app-screen-header {
+  height: 90px;
+  color: white;
+  /* box-shadow: 0 10px 20px -5px rgba(0, 0, 0, 0.2); */
+}
+div.app-screen-phoneInfo {
+  display: flex;
+  justify-content: space-between;
+  height: 35px;
+}
+div.app-screen-phoneInfo p {
+  margin: 10px;
+  width: 56px;
+  display: flex;
+  justify-content: center;
+}
+div.app-screen-phoneInfo p i {
+  margin-right: 4px;
+  margin-left: 4px;
+}
+div.app-screen-appInfo {
+  display: flex;
+  justify-content: space-between;
+}
+
+div.app-screen-appInfo.left {
+  display: flex;
+  justify-content: flex-start;
+}
+
+div.app-screen-appInfo p.center {
+  width: 184px;
+  text-align: center;
+}
+div.app-screen-appInfo p.center span {
+  font-size: 12px;
+}
+
+div.app-screen-appInfo p i {
+  width: 80px;
+  text-align: center;
+}
+div.app-screen-notification {
+  padding-left: 35px;
+  color: #bdbdbd;
+  margin-bottom: 10px;
+  padding-top: 12px;
+}
+.app-screen-chat {
+  display: flex;
+  flex-direction: column;
+  height: 90px;
+  flex-wrap: wrap;
+  font-family: 'PT Sans', sans-serif;
+  margin-top: 12px;
+}
+.app-screen-chat-texts {
+  display: flex;
+  flex-wrap: wrap;
+  width: 230px;
+  padding-top: 10px;
+  justify-content: space-between;
+}
+div.app-screen-chat-texts p {
+  margin: 0 0 5px 0;
+}
+.app-screen-chat img {
+  width: 59px;
+  height: 59px;
+  margin: 10px 20px;
+  border-radius: 30px;
+  box-shadow: 0 0 10px 8px hsl(0, 10%, 95%);
+}
+img.active {
+  box-shadow: 0 0 0px 3px hsl(0, 0%, 95%), 0 0 0px 6px rgba(58, 207, 214, 0.9);
+}
+
+p.app-screen-chat-name {
+  color: #273238;
+  font-weight: 700;
+  font-size: 20px;
+  margin-top: 5px;
+}
+div.app-screen-chat-texts p.app-screen-chat-time {
+  color: #c9c7c8;
+  margin-right: 5px;
+}
+p.app-screen-chat-message {
+  color: #acacac;
+  font-size: 14px;
+  flex-basis: 100%;
+}
+.app-screen-chats {
+  background-color: #fff;
+}
+
+div.openChat {
+  background-color: #f6f6f6;
+  min-height: 610px;
+}
+div.messagebox {
+  background: #fff;
+  color: #7d7d7f;
+  padding: 4px;
+  display: inline-block;
+  border-radius: 20px;
+  margin: 5px 20px;
+  box-shadow: 0 2px 10px 1px rgba(0, 0, 0, 0.2);
+}
+div.messagebox p {
+  padding: 0 10px;
+  margin: 12px 0;
+}
+div.messagebox.received:first-child {
+  margin-top: 20px;
+}
+
+div.messagebox.sent {
+  background: linear-gradient(#14bcc5, #2ed2de);
+  color: #fff;
+  text-align: left;
+}
+
+img.avatar {
+  width: 36px;
+  height: 36px;
+  margin: 9px;
+  display: inline-block;
+  border-radius: 20px;
+  box-shadow: 0 0 10px 8px hsl(0, 15%, 90%);
+}
+
+div.sentMessagesbox {
+  text-align: right;
+}
+
+div.senderInfo {
+  display: flex;
+  margin: 0 20px;
+  color: #9f9f9f;
+}
+div.senderInfo.outgoing {
+  justify-content: flex-end;
+}
+div.senderInfo.center {
+  justify-content: center;
+}
+div.senderInfo.center p {
+  margin: 4px;
+}
+div.messageInput {
+  color: #fff;
+  background: linear-gradient(#02afbd, #18c2d3);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20px;
+}
+
+div.messageInput i {
+  font-size: 1.5em;
+}
+
+button.sentButton {
+  background: #fff;
+  color: #05adb8;
+  height: 50px;
+  width: 50px;
+  position: relative;
+  top: -25px;
+  border-radius: 25px;
+  border: 0;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+}
+button.sentButton {
+  outline: none;
+}
+
+button.sentButton:hover {
+  background: #e8fdff;
+  box-shadow: 0 3px 15px 0 rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+}
+
+div.menu.greenTheme {
+  background: linear-gradient(#18c2d3, #1ecad8);
+}
+
+footer.copyright{
+  font-size: 20px;
+  text-align: center;
+  color: #0e9ca8;
+}
+footer.copyright a{ 
+  text-decoration: none;
+  color: #044950;
 }
