--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,6 @@ header h1 {
 }
 section.app-screen {
   background: #02afbd;
-  /* border: 1px solid black; */
 }
 
 section.loginScreen {
@@ -42,8 +41,6 @@ div.app-screen-logo {
 
 div.app-screen-signup {
   margin-top: 250px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: #9f9f9f;
 }
 div.app-screen-logo p {
@@ -105,7 +102,6 @@ div.menu-wrapper {
 div.app-screen-header {
   height: 90px;
   color: white;
-  /* box-shadow: 0 10px 20px -5px rgba(0, 0, 0, 0.2); */
 }
 div.app-screen-phoneInfo {
   display: flex;
@@ -177,6 +173,14 @@ div.app-screen-chat-texts p {
 }
 img.active {
   box-shadow: 0 0 0px 3px hsl(0, 0%, 95%), 0 0 0px 6px rgba(58, 207, 214, 0.9);
+}
+p.app-screen-chat-name span i {
+  color: #06aeb9;
+  font-size: 9px;
+  margin-left: 5px;
+  text-align: center;
+  vertical-align: middle;
+  padding-bottom: 2px;
 }
 
 p.app-screen-chat-name {
@@ -291,12 +295,12 @@ div.menu.greenTheme {
   background: linear-gradient(#18c2d3, #1ecad8);
 }
 
-footer.copyright{
+footer.copyright {
   font-size: 20px;
   text-align: center;
   color: #0e9ca8;
 }
-footer.copyright a{ 
+footer.copyright a {
   text-decoration: none;
   color: #044950;
 }
